--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,96 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kansoft Ltd - Empowering Digital Transformation</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <div class="logo-container">
+            <img src="images/kansoft-logo.png" alt="Kansoft Ltd Logo" class="logo">
+        </div>
+        <h1>Kansoft Ltd</h1>
+        <p>Transforming Businesses and Education through Technology and Marketing</p>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="#intro">Home</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#benefits">Benefits</a></li>
+            <li><a href="#cta">Get Started</a></li>
+        </ul>
+    </nav>
+
+    <section id="intro">
+        <h2>Transform Your Business with Kansoft Ltd</h2>
+        <p>Providing affordable and effective technology, marketing, and consulting services to help you thrive in the digital age.</p>
+    </section>
+
+    <section id="services">
+        <h2>Our Services</h2>
+        <div class="service">
+            <h3>Technology Services</h3>
+            <p>Software development, web applications, website page, IT consulting.</p>
+            <img src="images/tech-services.jpg" alt="Technology Services">
+        </div>
+        <div class="service">
+            <h3>Marketing Services</h3>
+            <p>Graphic design, social media management, content creation.</p>
+            <img src="images/tech.jpg" alt="Marketing Services">
+        </div>
+        <div class="service">
+            <h3>Consulting Services</h3>
+            <p>Business planning, strategy development, digital transformation.</p>
+            <img src="images/consulting-services.jpg" alt="Consulting Services">
+        </div>
+    </section>
+
+    <section id="benefits">
+        <h2>Why Choose Kansoft Ltd?</h2>
+        <div class="benefits-container">
+            <img src="images/why-us.jpg" alt="Why Choose Us">
+            <div class="benefits-content">
+                <h5>Enhanced Digital Presence</h5>
+                <p>Kansoft Ltd's solution helps organizations establish a strong online presence, increasing their visibility and credibility.</p>
+                <h5>Improved Efficiency and Competitiveness</h5>
+                <p>By leveraging technology and marketing expertise, organizations can streamline processes, reduce costs, and gain a competitive edge.</p>
+                <h5>Access to Expertise and Support</h5>
+                <p>Kansoft Ltd's team of experts provides guidance and support, helping organizations navigate the digital landscape and overcome challenges.</p>
+                <h5>Cost-Effective Solutions</h5>
+                <p>Kansoft Ltd's affordable pricing plans and flexible services enable organizations to achieve their digital goals without breaking the bank.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="cta">
+        <h2>Get Started with Kansoft Ltd Today!</h2>
+        <button id="contactButton">Contact Us</button>
+    </section>
+
+    <section id="contact-form" style="display:none;">
+        <h2> Contact Us</h2>
+        <form id="contactForm">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" required></textarea>
+
+            <button type="submit">Submit</button>
+        </form>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Kansoft Ltd. All rights reserved.</p>
+    </footer>
+
+    <script src="scripts.js"></script>
+</body>
+</html>
 
