--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
             <img src="images/kansoft-logo.png" alt="Kansoft Ltd Logo" class="logo">
         </div>
         <h1>Kansoft Ltd</h1>
-        <p>Transforming Businesses and Education through Technology and Marketing</p>
+        <p>Empowering Digital Transformation</p>
     </header>
 
     <nav>
@@ -39,7 +39,7 @@
         <div class="service">
             <h3>Marketing Services</h3>
             <p>Graphic design, social media management, content creation.</p>
-            <img src="images/tech.jpg" alt="Marketing Services">
+            <img src="images/marketing-services.jpg" alt="Marketing Services">
         </div>
         <div class="service">
             <h3>Consulting Services</h3>
@@ -50,17 +50,17 @@
 
     <section id="benefits">
         <h2>Why Choose Kansoft Ltd?</h2>
-        <div class="benefits-container">
-            <img src="images/why-us.jpg" alt="Why Choose Us">
-            <div class="benefits-content">
+        <div>
+            <img src="images/why-us.jpg" alt="Why Choose Kansoft">
+            <div>
                 <h5>Enhanced Digital Presence</h5>
-                <p>Kansoft Ltd's solution helps organizations establish a strong online presence, increasing their visibility and credibility.</p>
+                <p>Helping organizations establish a strong online presence.</p>
                 <h5>Improved Efficiency and Competitiveness</h5>
-                <p>By leveraging technology and marketing expertise, organizations can streamline processes, reduce costs, and gain a competitive edge.</p>
+                <p>Streamlining processes and reducing costs.</p>
                 <h5>Access to Expertise and Support</h5>
-                <p>Kansoft Ltd's team of experts provides guidance and support, helping organizations navigate the digital landscape and overcome challenges.</p>
+                <p>Providing guidance to navigate the digital landscape.</p>
                 <h5>Cost-Effective Solutions</h5>
-                <p>Kansoft Ltd's affordable pricing plans and flexible services enable organizations to achieve their digital goals without breaking the bank.</p>
+                <p>Affordable pricing plans to achieve digital goals.</p>
             </div>
         </div>
     </section>
@@ -71,7 +71,7 @@
     </section>
 
     <section id="contact-form" style="display:none;">
-        <h2> Contact Us</h2>
+        <h2>Contact Us</h2>
         <form id="contactForm">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
@@ -93,4 +93,3 @@
     <script src="scripts.js"></script>
 </body>
 </html>
-
