--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
         <div class="service">
             <h3>Marketing Services</h3>
             <p>Graphic design, social media management, content creation.</p>
-            <img src="images/marketing-services.jpg" alt="Marketing Services">
+            <img src="images/tech.jpg" alt="Marketing Services">
         </div>
         <div class="service">
             <h3>Consulting Services</h3>
@@ -50,17 +50,17 @@
 
     <section id="benefits">
         <h2>Why Choose Kansoft Ltd?</h2>
-        <div>
-            <img src="images/why-us.jpg" alt="Why Choose Kansoft">
-            <div>
+        <div class="benefits-container">
+            <img src="images/why-us.jpg" alt="Why Choose Us">
+            <div class="benefits-content">
                 <h5>Enhanced Digital Presence</h5>
-                <p>Helping organizations establish a strong online presence.</p>
+                <p>Kansoft Ltd's solution helps organizations establish a strong online presence, increasing their visibility and credibility.</p>
                 <h5>Improved Efficiency and Competitiveness</h5>
-                <p>Streamlining processes and reducing costs.</p>
+                <p>By leveraging technology and marketing expertise, organizations can streamline processes, reduce costs, and gain a competitive edge.</p>
                 <h5>Access to Expertise and Support</h5>
-                <p>Providing guidance to navigate the digital landscape.</p>
+                <p>Kansoft Ltd's team of experts provides guidance and support, helping organizations navigate the digital landscape and overcome challenges.</p>
                 <h5>Cost-Effective Solutions</h5>
-                <p>Affordable pricing plans to achieve digital goals.</p>
+                <p>Kansoft Ltd's affordable pricing plans and flexible services enable organizations to achieve their digital goals without breaking the bank.</p>
             </div>
         </div>
     </section>
