--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
             <img src="images/kansoft-logo.png" alt="Kansoft Ltd Logo" class="logo">
         </div>
         <h1>Kansoft Ltd</h1>
-        <p>Empowering Digital Transformation</p>
+        <p>Transforming Businesses and Education through Technology and Marketing</p>
     </header>
 
     <nav>
@@ -71,7 +71,7 @@
     </section>
 
     <section id="contact-form" style="display:none;">
-        <h2>Contact Us</h2>
+        <h2> Contact Us</h2>
         <form id="contactForm">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
@@ -92,4 +92,4 @@
 
     <script src="scripts.js"></script>
 </body>
-</html>
+    </html>
